modified shell.html to use a fixed header & footer, with a scrolling app area (called .wrap)

--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -2,3 +2,8 @@
 // @import 'colors';
 // Using these color variables will allow easy 'theming' and color changes to be made
 
+$header-bg: #000;
+
+$wrap-bg: #eee;
+
+$footer-bg: #000;
